# rosetta

./: Cargo.toml
crates/rosetta/: Cargo.toml
crates/rosetta/examples/: intermediate_access_demo.rs  streaming_demo.rs
crates/rosetta/src/: ast.rs  codegen.rs  dom.rs  error.rs  lib.rs  performance.rs
crates/rosetta/src/lexer/: nom_lexer.rs
examples/: gpui_hello_world.rs  gpui_incremental_demo.rs  nom_parser_demo.rs  performance_demo.rs  public_api_demo.rs  streaming_demo.rs  test_commonmark_features.rs  test_html_compliance.rs
src/: adapters.rs  ast.rs  codegen.rs  config.rs  controller.rs  dom.rs  error.rs  extensions.rs  lexer.rs  lib.rs  nom_parser.rs  parser.rs  performance.rs  streaming.rs
src/ir/: mod.rs  transform.rs  types.rs
src/lexer/: cursor.rs  nom_lexer.rs  position.rs  rules.rs  token.rs  token_impl.rs  token_type.rs  traits.rs
src/parser/: ast.rs  cgp_parser.rs  config.rs  core.rs  inline.rs  rules.rs  state.rs  tests.rs  token_buffer.rs  token_parser.rs  token_pipeline.rs  token_slice.rs  traits.rs  utils.rs
src/parser/rules/: block_patterns.rs  block_rules.rs  input.rs  markdown.rs  mod.rs
src/traits/: ast_traits.rs  cgp_traits.rs  component.rs  context_traits.rs  mod.rs  support_traits.rs  token_traits.rs
tests/: commonmark.rs
tests/commonmark/: mod.rs
