[package]
name = "rosetta"
version = "0.1.0"
edition = "2024"

[features]
default = ["html-generation"]
html-generation = []
dom-transformation = []
syntax-extensions = []
streaming = []
performance-optimized = []

[dependencies]
# Core dependencies for Unicode handling and error management
unicode-segmentation = "1.10"
thiserror = "1.0"
num_cpus = "1.16"

# Optional dependencies for different features
serde = { version = "1.0", optional = true, features = ["derive"] }
nom = { version = "7.1", features = ["alloc"] }

[dev-dependencies]
# Benchmarking and testing
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "rosetta"
path = "src/lib.rs"

